# wgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wgui.sln  win_clang_exports.def
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
cmake/modules/: Findfreetype_win.cmake
examples/: CMakeLists.txt
examples/sample_application/: CMakeLists.txt
examples/sample_application/src/: main.cpp
external_libs/: CMakeLists.txt
include/wgui/: fontmanager.h  types.hpp  wgui.h  wguidefinitions.h  wguifactories.h  wianchor.hpp  wiattachment.hpp  wibase.h  wibufferbase.h  wielementbufferdata.hpp  wielementdata.hpp  wihandle.h  wiincludes.h  wiskin.h
include/wgui/shaders/: wishader.hpp  wishader_colored.hpp  wishader_coloredline.hpp  wishader_text.hpp  wishader_textured.hpp  witexturedsubrect.hpp
include/wgui/types/: wi9slicerect.hpp  wiarrow.h  wibutton.h  wicircle.h  wicontentwrapper.hpp  wicontextmenu.hpp  widropdownmenu.h  wiline.h  wimenuitem.hpp  wirect.h  wiroot.h  wiroundedbase.h  wiscrollbar.h  wishape.h  witext.h  witext_iterator.hpp  witext_tags.hpp  witextentry.h  witextentrybase.h  witooltip.h
src/: definitions.hpp  fontmanager.cpp  main.cpp  stdafx_wgui.cpp  stdafx_wgui.h  wgui.cpp  wguifactories.cpp  wianchor.cpp  wibase.cpp  wibufferbase.cpp  wielementbufferdata.cpp  wihandle.cpp  wiskin.cpp
src/implementation/: anchor.cpp  buffer_base.cpp  core.cpp  draw_info.cpp  element_buffer_data.cpp  font_manager.cpp  skin.cpp  type_factory.cpp
src/implementation/shaders/: colored.cpp  colored_line.cpp  segmented_rect.cpp  shader.cpp  text.cpp  textured.cpp  textured_nine_slice.cpp  textured_sub_rect.cpp
src/implementation/types/: arrow.cpp  base.cpp  button.cpp  content_wrapper.cpp  context_menu.cpp  dropdown_menu.cpp  line.cpp  menu_item.cpp  nine_slice_rect.cpp  rect.cpp  root.cpp  rounded_base.cpp  scroll_bar.cpp  shape.cpp  text_entry.cpp  text_entry_base.cpp
src/implementation/types/text/: iterator.cpp  parsing.cpp  render.cpp  tags.cpp  text.cpp
src/implementation/types/text/tags/: color.cpp  link.cpp  selection.cpp  tag.cpp  tooltip.cpp  underline.cpp
src/interface/: anchor.cppm  attachment.cppm  buffer_base.cppm  core.cppm  display_text.cppm  draw_info.cppm  draw_state.cppm  element_buffer_data.cppm  element_data.cppm  enums.cppm  font_manager.cppm  gui.cppm  handle.cppm  skin.cppm  tooltip_manager.cppm  type_factory.cppm
src/interface/shaders/: colored.cppm  colored_line.cppm  segmented_rect.cppm  shader.cppm  shaders.cppm  text.cppm  textured.cppm  textured_nine_slice.cppm  textured_sub_rect.cppm
src/interface/types/: arrow.cppm  base.cppm  button.cppm  content_wrapper.cppm  context_menu.cppm  dropdown_menu.cppm  line.cppm  menu_item.cppm  nine_slice_rect.cppm  rect.cppm  root.cppm  rounded_base.cppm  scroll_bar.cppm  shape.cppm  text_entry.cppm  text_entry_base.cppm  tooltip.cppm  types.cppm
src/interface/types/text/: iterator.cppm  tags.cppm  text.cppm
src/shaders/: wishader.cpp  wishader_colored.cpp  wishader_coloredline.cpp  wishader_text.cpp  wishader_textured.cpp  witexturedsubrect.cpp
src/types/: wi9slicerect.cpp  wiarrow.cpp  wibutton.cpp  wicontentwrapper.cpp  wicontextmenu.cpp  widropdownmenu.cpp  wiline.cpp  wimenuitem.cpp  wirect.cpp  wiroot.cpp  wiroundedbase.cpp  wiscrollbar.cpp  wishape.cpp  witext.cpp  witext_parsing.cpp  witext_render.cpp  witext_tags.cpp  witextentry.cpp  witextentrybase.cpp  witooltip.cpp
src/types/text/: witext.cpp  witext_iterator.cpp  witext_parsing.cpp  witext_render.cpp  witext_tags.cpp  witextentry.cpp  witextentrybase.cpp
src/types/text/tags/: witext_tag.cpp  witext_tag_color.cpp  witext_tag_link.cpp  witext_tag_selection.cpp  witext_tag_tooltip.cpp  witext_tag_underline.cpp
wgui/: wgui.vcxproj  wgui.vcxproj.filters
